Removed last statements

--- a/CsLuaConverter/CsLuaConverter/CsLuaConverter.csproj
+++ b/CsLuaConverter/CsLuaConverter/CsLuaConverter.csproj
@@ -126,17 +126,11 @@
     <Compile Include="CodeTreeLuaVisitor\Member\IndexerDeclarationVisitor.cs" />
     <Compile Include="CodeTreeLuaVisitor\Member\ThisConstructorInitializerVisitor.cs" />
     <Compile Include="CodeTreeLuaVisitor\TypeSymbolSemanticAdaptor.cs" />
-    <Compile Include="CodeTreeLuaVisitor\Statement\CatchClauseVisitor.cs" />
     <Compile Include="CodeTreeLuaVisitor\Member\ConstructorDeclarationVisitor.cs" />
     <Compile Include="CodeTreeLuaVisitor\EqualsValueClauseVisitor.cs" />
     <Compile Include="CodeTreeLuaVisitor\Expression\ElementAccessExpressionVisitor.cs" />
     <Compile Include="CodeTreeLuaVisitor\Member\FieldDeclarationVisitor.cs" />
     <Compile Include="CodeTreeLuaVisitor\Accessor\AccessorDeclarationVisitor.cs" />
-    <Compile Include="CodeTreeLuaVisitor\Statement\CatchDeclarationVisitor.cs" />
-    <Compile Include="CodeTreeLuaVisitor\Statement\FinallyClauseVisitor.cs" />
-    <Compile Include="CodeTreeLuaVisitor\Statement\ForStatementVisitor.cs" />
-    <Compile Include="CodeTreeLuaVisitor\Statement\ThrowStatementVisitor.cs" />
-    <Compile Include="CodeTreeLuaVisitor\Statement\WhileStatementVisitor.cs" />
     <Compile Include="CodeTreeLuaVisitor\Type\ArrayRankSpecifierVisitor.cs" />
     <Compile Include="CodeTreeLuaVisitor\Type\NullableTypeVisitor.cs" />
     <Compile Include="CodeTreeLuaVisitor\Constraint\TypeParameterConstraintClauseVisitor.cs" />
@@ -154,8 +148,6 @@
     <Compile Include="CodeTreeLuaVisitor\ParameterVisitor.cs" />
     <Compile Include="CodeTreeLuaVisitor\Member\PropertyDeclarationVisitor.cs" />
     <Compile Include="CodeTreeLuaVisitor\Scope.cs" />
-    <Compile Include="CodeTreeLuaVisitor\Statement\ForEachStatementVisitor.cs" />
-    <Compile Include="CodeTreeLuaVisitor\Statement\TryStatementVisitor.cs" />
     <Compile Include="CodeTreeLuaVisitor\TypeParameterVisitor.cs" />
     <Compile Include="CodeTreeLuaVisitor\Type\ArrayTypeVisitor.cs" />
     <Compile Include="CodeTreeLuaVisitor\Type\PredefinedTypeVisitor.cs" />
@@ -211,10 +203,12 @@
     <Compile Include="Program.cs" />
     <Compile Include="AddOnConstruction\TocBuilder.cs" />
     <Compile Include="SyntaxExtensions\ExpressionExtensions.cs" />
+    <Compile Include="SyntaxExtensions\LoopExtensions.cs" />
     <Compile Include="SyntaxExtensions\SwitchExtensions.cs" />
     <Compile Include="SyntaxExtensions\SyntaxNodeExtensions.cs" />
     <Compile Include="SyntaxExtensions\NameExtensions.cs" />
     <Compile Include="SyntaxExtensions\StatementExtensions.cs" />
+    <Compile Include="SyntaxExtensions\TryCatchExtensions.cs" />
     <Compile Include="SyntaxExtensions\TypeExtensions.cs" />
     <Compile Include="SyntaxExtensions\TypeSwitch.cs" />
     <Compile Include="WrappingException.cs" />
