--- a/CsLuaConverter/CsLuaConverter/CsLuaConverter.csproj
+++ b/CsLuaConverter/CsLuaConverter/CsLuaConverter.csproj
@@ -198,6 +198,7 @@
     <Compile Include="SyntaxExtensions\ExpressionExtensions.cs" />
     <Compile Include="SyntaxExtensions\ListExtensions.cs" />
     <Compile Include="SyntaxExtensions\LoopExtensions.cs" />
+    <Compile Include="SyntaxExtensions\MemberExtensions.cs" />
     <Compile Include="SyntaxExtensions\SwitchExtensions.cs" />
     <Compile Include="SyntaxExtensions\SyntaxNodeExtensions.cs" />
     <Compile Include="SyntaxExtensions\NameExtensions.cs" />
