Progress on afterbuild script.

--- a/.gitignore
+++ b/.gitignore
@@ -82,3 +82,4 @@
 /CsLuaConverter/CsLuaFramework/bin/Release
 /CsLuaConverter/Lua/bin/Release
 /CsLuaConverter/CsLuaSyntaxTranslator/obj/Debug
+/CsLuaConverter/SystemZZZ/bin/Debug
