Updated gitignore and modified tests to run under VS2017 Live unit testing.

--- a/.gitignore
+++ b/.gitignore
@@ -6,20 +6,19 @@
 *.suo
 *.user
 /.vs/CsLuaCompiler/v14
-/CsLuaAttributes/bin/Debug
-/CsLuaAttributes/obj/Debug
-/CsLuaCompiler/bin/Debug
-/CsLuaCompiler/obj/Debug
+/CsLuaConverter/.vs
 /CsLuaConverter/CsLuaAttributes/bin/Debug
 /CsLuaConverter/CsLuaAttributes/obj/Debug
 /CsLuaConverter/CsLuaConverter/Binaries/Release
 /CsLuaConverter/CsLuaConverter/bin/Debug
 /CsLuaConverter/CsLuaConverter/obj/Debug
 /CsLuaConverter/CsLuaConverter/obj/Release
+
 /CsLuaConverter/CsLuaConverterTests/bin/Debug
 /CsLuaConverter/CsLuaConverterTests/bin/Release
 /CsLuaConverter/CsLuaConverterTests/obj/Debug
 /CsLuaConverter/CsLuaConverterTests/obj/Release
+
 /CsLuaConverter/CsLuaFramework/bin/Debug
 /CsLuaConverter/CsLuaFramework/bin/Release
 /CsLuaConverter/CsLuaFramework/obj/Debug
