--- a/CsLuaConverter/CsLuaConverterTests/packages.config
+++ b/CsLuaConverter/CsLuaConverterTests/packages.config
@@ -6,6 +6,8 @@
   <package id="Microsoft.CodeAnalysis.CSharp.Workspaces" version="1.3.2" targetFramework="net452" />
   <package id="Microsoft.CodeAnalysis.Workspaces.Common" version="1.3.2" targetFramework="net452" />
   <package id="Microsoft.Composition" version="1.0.30" targetFramework="net452" />
+  <package id="MSTest.TestAdapter" version="1.1.12" targetFramework="net452" />
+  <package id="MSTest.TestFramework" version="1.1.11" targetFramework="net452" />
   <package id="System.Collections.Immutable" version="1.2.0" targetFramework="net452" />
   <package id="System.Reflection.Metadata" version="1.3.0" targetFramework="net452" />
 </packages>
