--- a/CsLuaConverter/SystemZZZ/SystemZZZ.csproj
+++ b/CsLuaConverter/SystemZZZ/SystemZZZ.csproj
@@ -4,17 +4,15 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{32D382EB-4A64-4BAA-9B64-9C8EED9A0DE3}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <ProjectGuid>{B9D22C3A-1C29-418A-8B85-4E752FCF482F}</ProjectGuid>
+    <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>TypeListGenerator</RootNamespace>
-    <AssemblyName>TypeListGenerator</AssemblyName>
+    <RootNamespace>SystemZZZ</RootNamespace>
+    <AssemblyName>SystemZZZ</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -24,7 +22,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -43,24 +40,40 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
+    <Compile Include="ArgumentException.cs" />
+    <Compile Include="ArgumentNullException.cs" />
+    <Compile Include="Collections\Generic\IEnumerable.cs" />
+    <Compile Include="Collections\Generic\IEnumerator.cs" />
+    <Compile Include="Collections\IEnumerable.cs" />
+    <Compile Include="Collections\IEnumerator.cs" />
+    <Compile Include="Environment.cs" />
+    <Compile Include="IDisposable.cs" />
+    <Compile Include="Linq\Enumerable.cs" />
+    <Compile Include="Linq\Error.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SystemException.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="AfterBuild.ps1" />
+    <None Include="app.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\SystemZZZ\SystemZZZ.csproj">
-      <Project>{b9d22c3a-1c29-418a-8b85-4e752fcf482f}</Project>
-      <Name>SystemZZZ</Name>
+    <ProjectReference Include="..\CsLuaFramework\CsLuaFramework.csproj">
+      <Project>{3ec1fd14-1402-4adc-bbd0-07cf30e3a654}</Project>
+      <Name>CsLuaFramework</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\CsLuaSyntaxTranslatorClient\CsLuaSyntaxTranslatorClient.csproj">
+      <Project>{7592c1c1-8d39-4d75-9d17-82823b7a5dfd}</Project>
+      <Name>CsLuaSyntaxTranslatorClient</Name>
+      <Private>False</Private>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
-  </Target>
+  </Target>-->
   <Target Name="AfterBuild">
+    <Exec Command="powershell.exe .\AfterBuild.ps1 '$(SolutionDir)' '$(OutDir)'" />
   </Target>
-  -->
 </Project>
