--- a/CsLuaConverter/SystemZZZ/SystemZZZ.csproj
+++ b/CsLuaConverter/SystemZZZ/SystemZZZ.csproj
@@ -50,6 +50,7 @@
     <Compile Include="IDisposable.cs" />
     <Compile Include="Linq\Enumerable.cs" />
     <Compile Include="Linq\Error.cs" />
+    <Compile Include="Linq\Iterator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SystemException.cs" />
   </ItemGroup>
