--- a/CsLuaConverter/CsLuaConverter/CsLuaConverter.csproj
+++ b/CsLuaConverter/CsLuaConverter/CsLuaConverter.csproj
@@ -160,6 +160,7 @@
     <None Include="Lua\System\Collections\ICollection.lua" />
     <None Include="Lua\System\Collections\IList.lua" />
     <None Include="Lua\System\ArgumentOutOfRangeException.lua" />
+    <None Include="Lua\System\Predicate.lua" />
     <None Include="Lua\System\Single.lua" />
     <None Include="Lua\System\Func.lua" />
     <None Include="Lua\System\Enum.lua" />
