--- a/CsLuaConverter/SystemTests/SystemTests.csproj
+++ b/CsLuaConverter/SystemTests/SystemTests.csproj
@@ -57,8 +57,13 @@
   <ItemGroup>
     <Compile Include="ArgumentNullExceptionTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="LuaTests.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Lua\Lua.csproj">
+      <Project>{e9ebe6e6-d167-480a-ac2c-b6a00d5b8715}</Project>
+      <Name>Lua</Name>
+    </ProjectReference>
     <ProjectReference Include="..\SystemZZZ\SystemZZZ.csproj">
       <Project>{b9d22c3a-1c29-418a-8b85-4e752fcf482f}</Project>
       <Name>SystemZZZ</Name>
